--- a/templates/insert_results.html
+++ b/templates/insert_results.html
@@ -33,7 +33,7 @@
   </head>
   <body style="height: 100%; width: 100%; overflow-x: hidden; font-family: 'Merriweather', serif;">
     <!-- navbar -->
-    {% include 'nav_bar.html' %}
+    {% include 'navbar.html' %}
 
 
   <!-- hero -->
