--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -40,7 +40,7 @@
 <body style="height: 100%; width: 100%; overflow-x: hidden; font-family: 'Merriweather', serif;">
 
 
-{% include 'nav_bar.html' %}
+{% include 'navbar.html' %}
 
 
 <div class="min-h-screen bg-base-100 p-16 lg:p-32" style="background-image: url(static/bg2.jpg);">
