--- a/templates/invalid.html
+++ b/templates/invalid.html
@@ -34,7 +34,7 @@
 <body style="height: 100%; width: 100%; overflow-x: hidden; font-family: 'Merriweather', serif;">
 
 
-  {% include 'nav_bar.html' %}
+  {% include 'navbar.html' %}
 
 
   <div class="hero min-h-screen bg-base-100" style="background-image: url(static/bg2.jpg);">
