catlab, smolcatlab (a basic version of catlab), and software licensing updates.

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 <body>
     <div class="page-wrapper">
         {% block nav %}
-            {% include 'navbar.html' %}
+            {% include 'nav_bar.html' %}
         {% endblock %}
 
         <main class="main-content">
